[project]
name = "reliable-celery-pipelines"
version = "0.1.0"
description = "Reference implementations of fault-tolerant Celery patterns."
readme = "README.md"
authors = [
    { name = "Felipe", email = "felipe.batista.coelho@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "celery[redis]==5.4.0",
]

# This repo is a set of runnable demo scripts, not an installable library —
# tell uv not to look for a src/<pkg>/__init__.py layout.
[tool.uv]
package = false
